hphp/hack/test/typecheck/nameof/parsing/nameof_await.php
<?hh

class C {
  public static function f(): void {
    $foo = null;
    nameof await $foo;
  }
}
